ustore microservice completed and tested
